Reduced partner padding to fix column alignment bug on large screens

--- a/_sass/partnerships.scss
+++ b/_sass/partnerships.scss
@@ -23,7 +23,7 @@
 }
 
 .partner-member {
-  padding: 20px;
+  padding: 15px;
 }
 
 .partner-img {
